[package]
name = "hushnet-backend"
version = "0.1.0"
edition = "2021"

[dependencies]

axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rand = "0.8"
rand_core = { version = "0.6.4", default-features = false }
dotenvy = "0.15"
anyhow = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono"] }
uuid = {version = "1.18.1", features = ["serde", "v4"]}
chrono = {version = "0.4.42", features = ["serde"]}
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "serde"] }
jsonwebtoken = {version = "10.0.0", features = ["rust_crypto"]}
base64 = "0.22.1"
rsa = "=0.10.0-rc.9"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
