[package]
name = "hushnet-backend"
version = "0.0.1-alpha"
edition = "2021"

[dependencies]

axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dotenvy = "0.15"
anyhow = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono"] }
uuid = {version = "1.23.1", features = ["serde", "v4"]}
chrono = {version = "0.4.44", features = ["serde"]}
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "serde"] }
jsonwebtoken = {version = "10.3.0", features = ["rust_crypto"]}
base64 = "0.22.1"
rsa = "0.9.10"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
async-trait = "0.1"
sha2 = "0.11"
hex = "0.4"
# TODO : Monitor the RSA and ed25519-dalek crates for updates and security patches.